fixed certain bugs with the scroll over effect and changing window size doesn't break the website as much

--- a/Website/PortfolioStyle.css
+++ b/Website/PortfolioStyle.css
@@ -156,13 +156,6 @@ button.ScrollDownButton1:hover~#hr-nav{
 
 /* makes sure the buttons in the taskbar are central on the screen*/
 .VerticalCenter{
-    /* margin: 0;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
-
     display: flex;
 
     flex-direction: row;
@@ -203,38 +196,7 @@ button.ScrollDownButton1:hover~#hr-nav{
 
     transition: all .4s ease;
 }
-
-.TitleBar{
-    height: 12vh;
-
-    grid-row: auto;
-    grid-column: 1/8;
-    background-color: #353535;
-    text-align: center;
-
-    margin-bottom: 1vh;
-}
 /* … */
-
-/* container for the contact area of the homepage */
-.Contact{
-
-    background-color: #353535;
-
-
-    top: 100%;
-    left: 50%;
-
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-
-    text-align: center;
-    position: absolute;
-
-    width: 100%;
-    height: 1000px;
-}
-
 
 /* aligns all of the input fields with the textarea */
 textarea, input{
@@ -244,45 +206,50 @@ textarea, input{
     box-sizing: border-box;
 }
 
+.Parralax{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: #E0E0E0;
+    background-image: url('../ImagesProjects/MalagaJam/MalagaJam_Gif_2.gif');
+
+
+    min-height: 85vh;
+
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+}
+
 /* bar that scrolls up over specific elements */
 .ScrollBar{
     background-color: #353535;
 
-    margin-top: 33rem;
-
-    top: 90%;
-    left: 50%;
-
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
 
     text-align: center;
-    position: absolute;
 
-    width: 100%;
     height: 1000px;
 }
 
-.SkillBody{
-    margin-left: 35%;
-}
 
 /* style for the contact images*/
 .ContactSymbols{
-
     z-index: 0;
-    display: table-row;
 
-    padding-top: 5vh;
+    padding-top: 20px;
 
     width: 4%;
     margin-top: 0;
     filter: invert(100%) sepia(76%) saturate(176%) hue-rotate(323deg) brightness(115%) contrast(76%);
-}
-
-
-.SoftwarePadding{
-    text-align: center;
 }
 
 .SoftwareSymbols{
@@ -296,7 +263,6 @@ textarea, input{
 
     filter: invert(100%) sepia(76%) saturate(176%) hue-rotate(323deg) brightness(115%) contrast(76%);
 }
-
 
 .arrow {
 border: solid #E0E0E0;
